# BUSeniorProject2017

./: .gitignore  ReadMe.txt
apriltag_interface/: AprilTagInterface.cpp  AprilTagInterface.hpp  detectorTest.cpp
apriltag_interface/Debug/: AprilTagInterface.d  detectorTest.d  makefile  sources.mk  subdir.mk
apriltag_interface/apriltags/src/: Edge.cc  FloatImage.cc  GLine2D.cc  GLineSegment2D.cc  Gaussian.cc  GrayModel.cc  Homography33.cc  MathUtil.cc  Quad.cc  Segment.cc  TagDetection.cc  TagDetector.cc  TagFamily.cc  UnionFindSimple.cc
apriltags/.svn/: wc.db
apriltags/pod-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
apriltags/pod-build/example/: Makefile  cmake_install.cmake
apriltags_interface/: CMakeLists.txt  DetectionTest.cpp
apriltags_interface/example/: DetectionTest.cpp
apriltags_interface/lib/AprilTags/: GrayModel.cc  GrayModel.h  Quad.cc  Quad.h
apriltags_interface/sources/: AprilTagInterface.hpp
c_uart_interface_example/: autopilot_interface.cpp  mavlink_control  mavlink_control.cpp
dronekit/pipe_example/: FifoComm.cpp  FifoComm.hpp
hello_world/Debug/: hello_world
hello_world/src/: hello_world.cpp
jekyll/my-awesome-site/_posts/: 2017-04-22-welcome-to-jekyll.markdown
project-apriltagsInterface/cmake/: FindV4L2.cmake
project-apriltagsInterface/example/: CMakeLists.txt
project-apriltagsInterface/lib/AprilTags/: Homography33.cc  Homography33.h  TagDetection.h
project-apriltagsInterface/sources/: AprilTagInterface.cpp  CMakeLists.txt
project-master/: CMakeLists.txt  ReadMe.md
project-master/example/: CMakeLists.txt  fifo.cpp
project-master/examples/: CMakeLists.txt  DetectionTest.cpp  fifo.cpp  quad.cpp
project-master/inc/: AprilTagInterface.hpp  FifoComm.hpp
project-master/python-scripts/: guided_set_speed_yaw.py  guided_test.py  pipe_example.py  pipe_example_output.txt  quad.py  quad_pipe_example.py
project-master/src/: AprilTagInterface.cpp  CMakeLists.txt  FifoComm.cpp
(+18 files in other folders)
